# allures-backend

./: .dockerignore  .env.prod  .gitattributes  .gitignore  AUTHORS.txt  Dockerfile  NEWS.txt  README.md  bigl_all_products.csv  bigl_electronics.csv  docker-compose-auth_service.yml  docker-compose-dashboard-service.yml  docker-compose-db.yml  docker-compose-discount_service.yml  docker-compose-product-service.yml  docker-compose-sales-service.yml  docker-compose.override.yml  docker-compose.review-service.yml  docker-compose.yml  env.example  generate-env-db.sh  main.py  manage.sh  pyproject.toml  requirements-ml.txt  requirements.dev.txt  requirements.txt  test_connection.py  test_product_proxy.py  test_sales_service.py
.github/workflows/: deploy.yml  docker-build.yml
common/: custom_exceptions.py
common/config/: settings.py
common/db/: base.py  database.py  product_connection.py  session.py
common/enums/: product_enums.py
common/models/: __init__.py  admin.py  categories.py  company.py  dashboard_log.py  inventory.py  payment.py  products.py  sales.py  schedule.py  subscriptions.py  uploads.py  user.py
common/utils/: fastapi_app.py
fashion-dataset/: rename_images_by_styles.py
graphql_app/: external_client.py  schema.py
services/admin_service/: .dockerignore  .gitattributes  Dockerfile  docker-compose.admin_service.yml  main.py  requirements.txt
services/auth_service/: .dockerignore  .gitignore  Dockerfile  docker-compose.auth_service.yml  env.example  main.py  requirements.dev.txt  requirements.txt
services/dashboard_service/: .gitignore  main.py  (+2 more)
(+106 files in other folders)
